better solution for spacing fix

--- a/rtl.css
+++ b/rtl.css
@@ -594,6 +594,10 @@ a img {
   padding-bottom: 1.5em;
 }
 
+.more-link-wrapper {
+  margin: 1.5em 0;
+}
+
 .sticky-status span {
   display: inline-block;
   padding: 2px 6px;
@@ -614,6 +618,11 @@ a img {
   .archive .entry,
   .search .entry {
     margin-top: 3em;
+  }
+  .blog .post-content,
+  .archive .post-content,
+  .search .post-content {
+    padding-bottom: 1.5em;
   }
 }
 .comments-number {
