--- a/sass/_archives.scss
+++ b/sass/_archives.scss
@@ -23,6 +23,9 @@
     padding-bottom: $baseline-height;
   }
 }
+.more-link-wrapper {
+  margin: $baseline-height 0;
+}
 .sticky-status {
 
   span {
@@ -58,6 +61,9 @@
 
     .entry {
       margin-top: $baseline-height * 2;
+    }
+    .post-content {
+      padding-bottom: $baseline-height;
     }
   }
 }
